Adding GENE_MODEL_FILENAME

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -56,6 +56,7 @@ GENEMODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v98
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/Canis_familiaris.CanFam3.1.98.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/CHECKSUMS
+GENE_MODEL_FILENAME=Canis_familiaris.CanFam3.1.98.gtf
 
 ###########################################
 ##  STAR Index Variables, some created by previous steps
