Updating snpeff db name and adding broad known sites

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -76,7 +76,7 @@ SALMON_TYPE="puff"
 ###########################################
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=canfam3.98
+SNPEFF_DB_NAME=canfam3.1.98
 
 ###########################################
 ##  VEP Database Variables
@@ -123,3 +123,9 @@ XML_FILE_DOWNLOAD_LINK=https://omia.org/dumps/omia.xml.gz
 
 SNP_VCF_FILE_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/GCA_000002285.2_current_ids.vcf.gz
 SNP_VCF_MD5SUM_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/md5checksums.txt
+
+###########################################
+## GATK known sites
+###########################################
+
+BROAD_KNOWN_SITES=https://data.broadinstitute.org/vgb/dog/dog/canFam3/variation/
