Added MSIsensor-pro module name

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -157,6 +157,7 @@ SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grc
 ##  MSIsensor-pro Variables
 ###########################################
 MSISENSOR_PRO_VERSION="1.1.a"
+MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
 
 ###########################################
 ##  PUBLIC DATABASE VARIABLES
