Added the creation of the rsem index to the phoenix workflow.

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -93,6 +93,11 @@ DISEASE_NAME=myeloma
 DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/master/immunoglobulin_transcripts/Homo_sapiens_GRCh38_98_ucsc_ig_ENST_to_filter_out.tsv
 
 ###########################################
+##  RSEM Variables
+###########################################
+RSEM_VERSION="1.3.3"
+
+###########################################
 ##  STAR Index Variables, some created by previous steps
 ###########################################
 
