Reduced duplicate code and synchronized workflows for better maintainabiltiy

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -34,56 +34,68 @@ GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 # faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
 FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 
+
 ###########################################
 ##  Common Variables
 ###########################################
 
 WORKFLOW_NAME=phoenix
 GENOME_SUBVERSION_NAME=hg38tgen
-
-###########################################
-##  Reference Genome Index Variables
-###########################################
-
-SAMTOOLS_VERSION="1.9"
-
-REFERENCE_DNA_BASE_DOWNLOAD=ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set.fna.gz
-REFERENCE_DNA_GENOME_NAME=GRCh38tgen_decoy_alts_hla.fa
-REFERENCE_RNA_GENOME_NAME=GRCh38tgen_decoy.fa
-
-# Created during reference genome creations process
-#REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
-#REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
-#REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
-#REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
+SPECIES="Homo sapiens"
 
 
-###########################################
-##  BWA Index Variables
-###########################################
-
-BWA_VERSION="0.7.17"
-
-###########################################
-##  Bowtie2 Index Variables
+#######################################
+##  Required Modules (Or available in your $PATH)
 ###########################################
 
 BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
 BOWTIE2_VERSION="2.3.5.1"
 
+BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
+BWA_VERSION="0.7.17"
+
+GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
+
+SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
+
+STAR_VERSION="2.7.5a"
+
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
+
+SNPEFF_VERSION="v4_3t"
+SNPEFF_DB_NAME=grch38.98
+
+CELLRANGER_VERSION="3.1.0"
+
+DEEPVARIANT_VERSION="v0.10.0"
+
+MSISENSOR_PRO_VERSION="1.1.a"
+MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
+
+RSEM_VERSION="1.3.3"
+
+
+###########################################
+##  Reference Genome Index Variables
+###########################################
+
+GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set.fna.gz
+GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ncbi.nlm.nih.gov//genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/md5checksums.txt
+REFERENCE_DNA_GENOME_NAME=GRCh38tgen_decoy_alts_hla.fa
+REFERENCE_RNA_GENOME_NAME=GRCh38tgen_decoy.fa
+
+
 ###########################################
 ##  Gene Model Variables
 ###########################################
 
+GENE_MODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v98
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/Homo_sapiens.GRCh38.98.gtf.gz
-# Final filename of manipulated gene model file
+GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/CHECKSUMS
 GENE_MODEL_FILENAME=Homo_sapiens.GRCh38.98.ucsc.gtf
 
-
-# Created during gene model creation process
-#GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.gtf
-#GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
 
 ###########################################
 ##  Disease Specific Variables
@@ -92,16 +104,6 @@ GENE_MODEL_FILENAME=Homo_sapiens.GRCh38.98.ucsc.gtf
 DISEASE_NAME=myeloma
 DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/master/immunoglobulin_transcripts/Homo_sapiens_GRCh38_98_ucsc_ig_ENST_to_filter_out.tsv
 
-###########################################
-##  RSEM Variables
-###########################################
-RSEM_VERSION="1.3.3"
-
-###########################################
-##  STAR Index Variables, some created by previous steps
-###########################################
-
-STAR_VERSION="2.7.5a"
 
 ###########################################
 ##  STAR-Fusion resources
@@ -116,29 +118,12 @@ STAR_FUSION_SOURCE_VERSION=gencode_v32
 #STARFUSION_SOURCE_MD5_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz.md5sum
 #GENCODE_GTF_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/gencode.v32.annotation.gtf.gz
 
-###########################################
-##  Salmon Index Variables, some created by previous steps
-###########################################
-
-SALMON_VERSION="1.2.1-gompi-2019a"
-SALMON_TYPE="puff"
-
-###########################################
-##  snpEff Custom Database Variables, some created by previous steps
-###########################################
-
-SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=grch38.98
 
 ###########################################
 ##  VEP Database Variables
 ###########################################
 ENSEMBL_VERSION="98"
 
-###########################################
-##  Cell Ranger Variables
-###########################################
-CELLRANGER_VERSION="3.1.0"
 
 ###########################################
 ##  GATK CNV Variables
@@ -146,27 +131,9 @@ CELLRANGER_VERSION="3.1.0"
 GENOME_BUILD="Homo_sapiens.GRCh38"
 LAST_PRIMARY_CONTIG="chrY"
 
-###########################################
-##  Deepvariant Variables
-###########################################
-# Note: Download requires "v" but find step need "v" removed
-DEEPVARIANT_VERSION="v0.10.0"
 
 ###########################################
 ##  snpSniffer Variables
 ###########################################
 SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/positions_387_hg38_ucsc.txt
 SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/databaseV5_hg38_ucsc.ini
-
-###########################################
-##  MSIsensor-pro Variables
-###########################################
-MSISENSOR_PRO_VERSION="1.1.a"
-MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
-
-###########################################
-##  PUBLIC DATABASE VARIABLES
-###########################################
-COSMIC_VERSION="v92"
-DBSNP_VERSION="b154"
-CLINVAR_VERSION="20201020"
