--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -2,31 +2,71 @@
 # Used by Build scripts to create needed files in expected locations
 
 ###########################################
+## UPDATE THESE BASED ON YOUR LOCAL ENVIRONMENT
+###########################################
+
+# Set your environment variable (MUST BE ONE OF "TGen" or "LOCAL"
+ENVIRONMENT=TGen
+#ENVIRONMENT=LOCAL
+
+# Define input and output directories
+PARENT_DIR=/home/tgenref/canis_familiaris/canfam3.1
+TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
+PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
+CREATOR=jkeats
+
+## WARNING!!!
+## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
+
+# Set the number of local compute cores to leverage threading options for some steps
+LOCAL_COMPUTE_CORES=20
+# snpEff.jar (https://sourceforge.net/projects/snpeff/files/snpEff_v4_3t_core.zip/download)
+SNPEFF=/packages/snpEff/snpEff_v4_3t_core/snpEff/snpEff.jar
+# NCBI eUTILs PATH (https://www.ncbi.nlm.nih.gov/books/NBK179288/)
+EUTILS_PATH=/home/jkeats/downloads/edirect/
+# JSON.awk (https://github.com/step-/JSON.awk/archive/1.3.tar.gz)
+JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
+# UCSC gtfToGenePred binary (http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/gtfToGenePred)
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+# faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
+FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
+
+
+###########################################
 ##  Common Variables
 ###########################################
 
-ENVIRONMENT=TGen
-
 WORKFLOW_NAME=coyote
+GENOME_SUBVERSION_NAME=canfam3.1_tgen
 SPECIES="Canis familiaris"
-PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
-CREATOR=jkeats
-PARENT_DIR=/home/tgenref/canis_familiaris/canfam3.1
-TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
+
 
 ###########################################
-##  Required Modules or Binaries (Or available in your $PATH)
+##  Required Modules (Or available in your $PATH)
 ###########################################
 
 BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
 BOWTIE2_VERSION="2.3.5.1"
+
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
+
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 
-# This is a hard link to the binary, putting it in your $PATH will fail with existing code
-GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+STAR_VERSION="2.7.5a"
+
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
+
+SNPEFF_VERSION="v4_3t"
+SNPEFF_DB_NAME=canfam3.1.98
+
+CELLRANGER_VERSION="3.1.0"
+
+DEEPVARIANT_VERSION="v0.10.0"
+
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -35,48 +75,22 @@ GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 GENOME_SOURCE=ensembl
 GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_familiaris/dna/Canis_familiaris.CanFam3.1.dna.toplevel.fa.gz
 GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_familiaris/dna/CHECKSUMS
-GENOME_ASSEMBLY_NAME=canfam3.1
-GENOME_SUBVERSION_NAME=canfam3.1_tgen
-REFERENCE_DNA_GENOME_FASTA=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel.fa
-REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel
 REFERENCE_DNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
 REFERENCE_RNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
+GENOME_ASSEMBLY_NAME=canfam3.1
+GENOME_SUBVERSION_NAME=canfam3.1_tgen
 
-###########################################
-##  BWA Index Variables
-###########################################
-
-# See BWA version above
 
 ###########################################
 ##  Gene Model Variables
 ###########################################
 
-GENEMODEL_SOURCE=ensembl
+GENE_MODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v98
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/Canis_familiaris.CanFam3.1.98.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/CHECKSUMS
 GENE_MODEL_FILENAME=Canis_familiaris.CanFam3.1.98.gtf
 
-###########################################
-##  STAR Index Variables, some created by previous steps
-###########################################
-
-STAR_VERSION="2.7.5a"
-
-###########################################
-##  Salmon Index Variables, some created by previous steps
-###########################################
-
-SALMON_VERSION="1.2.1-gompi-2019a"
-SALMON_TYPE="puff"
-
-###########################################
-##  snpEff Custom Database Variables, some created by previous steps
-###########################################
-
-SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=canfam3.1.98
 
 ###########################################
 ##  VEP Database Variables
@@ -86,11 +100,6 @@ ENSEMBL_VERSION="98"
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/canis_familiaris_vep_98_CanFam3.1.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
-###########################################
-##  Cell Ranger Variables
-###########################################
-
-CELLRANGER_VERSION="3.1.0"
 
 ###########################################
 ##  GATK CNV Variables
@@ -98,11 +107,6 @@ CELLRANGER_VERSION="3.1.0"
 GENOME_BUILD="Canis_familiaris.CanFam3.1"
 LAST_PRIMARY_CONTIG="X"
 
-###########################################
-##  Deepvariant Variables
-###########################################
-
-DEEPVARIANT_VERSION="v0.10.0"
 
 ###########################################
 ##  DogSD Canine SNP Database
@@ -111,11 +115,13 @@ DEEPVARIANT_VERSION="v0.10.0"
 SNP_FILE_DOWNLOAD_LINK=ftp://download.big.ac.cn/idog/dogsd/vcf/Filtred_Published.vcf.bz2
 SNP_FILE_MD5SUM_DOWNLOAD_LINK=ftp://download.big.ac.cn/idog/dogsd/vcf/md5.txt
 
+
 ###########################################
 ##  OMIA Online Mendelian Inheritance in Animals, HTTP resource only
 ###########################################
 
 XML_FILE_DOWNLOAD_LINK=https://omia.org/dumps/omia.xml.gz
+
 
 ###########################################
 ##  EVA (European Variation Archive), formerly dbSNP data
@@ -123,6 +129,7 @@ XML_FILE_DOWNLOAD_LINK=https://omia.org/dumps/omia.xml.gz
 
 SNP_VCF_FILE_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/GCA_000002285.2_current_ids.vcf.gz
 SNP_VCF_MD5SUM_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/md5checksums.txt
+
 
 ###########################################
 ## GATK known sites
