--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -34,23 +34,42 @@ GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 # faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
 FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 
+
 ###########################################
 ##  Common Variables
 ###########################################
 
 WORKFLOW_NAME=suncity
 GENOME_SUBVERSION_NAME=hs37d5_suncity
+SPECIES="Homo sapiens"
+
 
 ###########################################
-##  Required Modules (Or available in your $PATH
+##  Required Modules (Or available in your $PATH)
 ###########################################
 
 BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
 BOWTIE2_VERSION="2.3.5.1"
+
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
+
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
+
+STAR_VERSION="2.7.5a"
+
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
+
+SNPEFF_VERSION="v4_3t"
+SNPEFF_DB_NAME=hs37d5.87
+
+CELLRANGER_VERSION="3.1.0"
+
+DEEPVARIANT_VERSION="v0.10.0"
+
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -60,26 +79,22 @@ GENOME_SOURCE=1000G
 # Downloaded from this location as there was a decompression error warning on the version from NCBI
 GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
 GENOME_FASTA_MD5_DOWNLOAD_LINK=NA
+REFERENCE_DNA_GENOME_NAME=hs37d5.fa
+REFERENCE_RNA_GENOME_NAME=hs37d5.fa
 GENOME_ASSEMBLY_NAME=GRCh37
 GENOME_SUBVERSION_NAME=hs37d5
 
-###########################################
-##  BWA Index Variables
-###########################################
-
-REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity/genome_reference/hs37d5.fa
-REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity/genome_reference/hs37d5
-REFERENCE_DNA_GENOME_NAME=hs37d5.fa
-REFERENCE_RNA_GENOME_NAME=hs37d5.fa
 
 ###########################################
 ##  Gene Model Variables
 ###########################################
 
+GENE_MODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v87
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/Homo_sapiens.GRCh37.87.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/CHECKSUMS
 GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.gtf
+
 
 ###########################################
 ##  Disease Specific Variables
@@ -88,25 +103,6 @@ GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.gtf
 DISEASE_NAME=myeloma
 DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/master/immunoglobulin_transcripts/Homo_sapiens_GRCh37_74_ig_ENST_to_filter_out.tsv
 
-###########################################
-##  STAR Index Variables, some created by previous steps
-###########################################
-
-STAR_VERSION="2.7.5a"
-
-###########################################
-##  Salmon Index Variables, some created by previous steps
-###########################################
-
-SALMON_VERSION="1.2.1-gompi-2019a"
-SALMON_TYPE="puff"
-
-###########################################
-##  snpEff Custom Database Variables, some created by previous steps
-###########################################
-
-SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=hs37d5.87
 
 ###########################################
 ##  VEP Database Variables
@@ -116,34 +112,6 @@ SNPEFF_DB_NAME=hs37d5.87
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
-###########################################
-##  Cell Ranger Variables
-###########################################
-
-CELLRANGER_VERSION="3.1.0"
-
-###########################################
-##  dbSNP Database Variables
-###########################################
-
-DBSNP_RELEASE_VERSION=b138
-BROAD_BUNDLE_DBSNP_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/dbsnp_138.b37.vcf.gz
-BROAD_BUNDLE_DBSNP_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/dbsnp_138.b37.vcf.gz.md5
-
-DBSNP_DOWNLOAD_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz
-DBSNP_DOWNLOAD_MD5SUM_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz.md5
-
-###########################################
-##  gnomAD Database Variables
-###########################################
-
-GNOMAD_RELEASE_VERSION=r2.1.1
-
-GNOMAD_EXOME_DOWNLOAD_LINK=https://storage.googleapis.com/gnomad-public/release/2.1.1/vcf/exomes/gnomad.exomes.r2.1.1.sites.vcf.bgz
-GNOMAD_EXOME_DOWNLOAD_MD5SUM=f034173bf6e57fbb5e8ce680e95134f2
-
-GNOMAD_GENOME_DOWNLOAD_LINK=https://storage.googleapis.com/gnomad-public/release/2.1.1/vcf/genomes/gnomad.genomes.r2.1.1.sites.vcf.bgz
-GNOMAD_GENOME_DOWNLOAD_MD5SUM=e6eadf5ac7b2821b40f350da6e1279a2
 
 ###########################################
 ##  GATK CNV Variables
@@ -151,16 +119,13 @@ GNOMAD_GENOME_DOWNLOAD_MD5SUM=e6eadf5ac7b2821b40f350da6e1279a2
 GENOME_BUILD="Homo_sapiens.GRCh37"
 LAST_PRIMARY_CONTIG="Y"
 
-###########################################
-##  Deepvariant Variables
-###########################################
-DEEPVARIANT_VERSION="v0.10.0"
 
 ###########################################
 ##  snpSniffer Variables
 ###########################################
 SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/positions_387_hg19.txt
 SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/databaseV5.ini
+
 
 ###########################################
 ##  Broad Resource Bundle Variables
