--- a/phoenix/phoenix_resources.ini
+++ b/phoenix/phoenix_resources.ini
@@ -51,8 +51,8 @@ SPECIES="Homo sapiens"
 BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
 BOWTIE2_VERSION="2.3.5.1"
 
-BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+BWA_MEM2_VERSION="2.2.1"
 
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
 
