Adding CDS padded bed creation script(s). Suncity will need independent script.

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -97,6 +97,7 @@ GENE_MODEL_FILENAME=Canis_familiaris.CanFam3.1.98.gtf
 ###########################################
 
 ENSEMBL_VERSION="98"
+ENSEMBL_DATABASE="canis_familiaris_core_98_31"
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/canis_familiaris_vep_98_CanFam3.1.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
