--- a/phoenix/phoenix_resources.ini
+++ b/phoenix/phoenix_resources.ini
@@ -123,6 +123,7 @@ STAR_FUSION_SOURCE_VERSION=gencode_v32
 ##  VEP Database Variables
 ###########################################
 ENSEMBL_VERSION="98"
+ENSEMBL_DATABASE="homo_sapiens_core_98_38"
 
 
 ###########################################
