--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -107,7 +107,8 @@ DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/maste
 ###########################################
 ##  VEP Database Variables
 ###########################################
-
+ENSEMBL_VERSION="87"
+ENSEMBL_DATABASE="homo_sapiens_core_87_38"
 # Need to check but this should be ensembl 87 release on GRCh37 coordinates but compatible with VEP v98
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
