Adding port definition for separate sql servers. Allows for suncity to still use shared script instead of liftover

--- a/phoenix/phoenix_resources.ini
+++ b/phoenix/phoenix_resources.ini
@@ -124,6 +124,7 @@ STAR_FUSION_SOURCE_VERSION=gencode_v32
 ###########################################
 ENSEMBL_VERSION="98"
 ENSEMBL_DATABASE="homo_sapiens_core_98_38"
+ENSEMBL_PORT="3306"
 
 
 ###########################################
