Added complete NCBI download validation code

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -75,13 +75,14 @@ DEEPVARIANT_VERSION="v0.10.0"
 ##  Reference Genome Index Variables
 ###########################################
 
-GENOME_SOURCE=NCBI
-# Downloaded from this location as there was a decompression error warning on the version from NCBI
-GENOME_FASTA_DOWNLOAD_LINK=https://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/009/914/755/GCA_009914755.3_CHM13_T2T_v1.1/GCA_009914755.3_CHM13_T2T_v1.1_genomic.fna.gz
-###ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
-GENOME_FASTA_MD5_DOWNLOAD_LINK=https://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/009/914/755/GCA_009914755.3_CHM13_T2T_v1.1/md5checksums.txt
-REFERENCE_DNA_GENOME_NAME=GCA_009914755.3_CHM13_T2T_v1.1_genomic.fna
-REFERENCE_RNA_GENOME_NAME=GCA_009914755.3_CHM13_T2T_v1.1_genomic.fna
+GENOME_SOURCE=T2T
+# Downloaded from this location as the version from NCBI does not use chr1,2, etc.. but accession numbers for contig names
+GENOME_FASTA_DOWNLOAD_LINK=https://s3-us-west-2.amazonaws.com/human-pangenomics/T2T/CHM13/assemblies/chm13.draft_v1.1.fasta.gz
+GENOME_FASTA_MD5_DOWNLOAD_LINK=NA
+# For T2T the MD5 is proided as text on the github site (https://github.com/marbl/CHM13)
+GENOME_FASTA_MD5=1cab2b2776005cdf339ec9f283ba2c70
+REFERENCE_DNA_GENOME_NAME=chm13.draft_v1.1.fasta
+REFERENCE_RNA_GENOME_NAME=chm13.draft_v1.1.fasta
 GENOME_ASSEMBLY_NAME=T2T_CHM13
 GENOME_SUBVERSION_NAME=T2T_CHM13_v1.1
 
