--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -91,11 +91,13 @@ GENOME_SUBVERSION_NAME=T2T_CHM13_v1.1
 ##  Gene Model Variables
 ###########################################
 
-GENE_MODEL_SOURCE=ensembl
-GENE_MODEL_NAME=ensembl_v87
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/Homo_sapiens.GRCh37.87.gtf.gz
-GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/CHECKSUMS
-GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.gtf
+# Not easy to establish the source gene models mapped to this reference with CAT and LiftOff (http://t2t.gi.ucsc.edu/chm13/hub/t2t-chm13-v1.0/CAT_V4/consensus_CHM13.html)
+GENE_MODEL_SOURCE=T2T
+GENE_MODEL_NAME=gencode_v35_liftover
+GENE_MODEL_DOWNLOAD_LINK=https://s3-us-west-2.amazonaws.com/human-pangenomics/T2T/CHM13/assemblies/annotation/chm13.draft_v1.1.gene_annotation.v4.gff3.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=NA
+GENE_MODEL_MD5_DOWNLOAD_MD5=d6b148d16bf303e25552e381cddff9df
+GENE_MODEL_FILENAME=chm13.draft_v1.1.gene_annotation.v4.gff3
 
 
 ###########################################
