adding path for T2T snpSniffer files

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -129,8 +129,8 @@ LAST_PRIMARY_CONTIG="Y"
 ###########################################
 ##  snpSniffer Variables
 ###########################################
-SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/positions_387_hg19.txt
-SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/databaseV5.ini
+SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/t2t_chm13_v1.1_contigs/positions_387_t2t_chm13.txt
+SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/t2t_chm13_v1.1_contigs/databaseV5_t2t_chm13.ini
 
 
 ###########################################
