Migrating scripts from coyote and workarounds for downloads

--- a/bastien/bastien_resources.ini
+++ b/bastien/bastien_resources.ini
@@ -61,7 +61,7 @@ SALMON_VERSION="1.2.1-gompi-2019a"
 SALMON_TYPE="puff"
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=canfam3.1.98
+SNPEFF_DB_NAME=ros_cfam1.0.105
 
 CELLRANGER_VERSION="3.1.0"
 
@@ -73,8 +73,8 @@ DEEPVARIANT_VERSION="v0.10.0"
 ###########################################
 
 GENOME_SOURCE=ensembl
-GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiaris/dna/Canis_lupus_familiaris.ROS_Cfam_1.0.dna.toplevel.fa.gz
-GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_familiaris/dna/CHECKSUMS
+GENOME_FASTA_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiaris/dna/Canis_lupus_familiaris.ROS_Cfam_1.0.dna.toplevel.fa.gz
+GENOME_FASTA_MD5_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiaris/dna/CHECKSUMS
 REFERENCE_DNA_GENOME_NAME=Canis_familiaris.ROS_Cfam_1.0.dna.toplevel.fa
 REFERENCE_RNA_GENOME_NAME=Canis_familiaris.ROS_Cfam_1.0.dna.toplevel.fa
 GENOME_ASSEMBLY_NAME=ros_cfam1.0
@@ -89,7 +89,7 @@ GENE_MODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v105
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.105.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiaris/CHECKSUMS
-GENE_MODEL_FILENAME=Canis_familiaris.ROS_Cfam_1.0.105.gtf
+GENE_MODEL_FILENAME=Canis_lupus_familiaris.ROS_Cfam_1.0.105.gtf
 
 
 ###########################################
