Adding liftover creation and usage in canine create snp database scripts, along with misc improvements

--- a/monte/monte_resources.ini
+++ b/monte/monte_resources.ini
@@ -10,8 +10,8 @@ ENVIRONMENT=TGen
 #ENVIRONMENT=LOCAL
 
 # Define input and output directories
-PARENT_DIR=/home/tgenref/canis_familiaris/ros_cfam1.0
-TOPLEVEL_DIR=/home/tgenref/canis_familiaris/ros_cfam1.0/ros_cfam1.0_tgen
+PARENT_DIR=/home/tgenref/canis_familiaris/dog10k_boxer_tasha
+TOPLEVEL_DIR=/home/tgenref/canis_familiaris/dog10k_boxer_tasha/dog10k_boxer_tasha_tgen
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
 CREATOR=bturner
 
@@ -36,8 +36,8 @@ FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 ##  Common Variables
 ###########################################
 
-WORKFLOW_NAME=bastien
-GENOME_SUBVERSION_NAME=ros_cfam1.0_tgen
+WORKFLOW_NAME=monte
+GENOME_SUBVERSION_NAME=dog10k_boxer_tasha_tgen
 SPECIES="Canis familiaris"
 
 
@@ -61,7 +61,7 @@ SALMON_VERSION="1.2.1-gompi-2019a"
 SALMON_TYPE="puff"
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=ros_cfam1.0.105
+SNPEFF_DB_NAME=dog10k_boxer_tasha.105
 
 CELLRANGER_VERSION="3.1.0"
 
@@ -73,12 +73,12 @@ DEEPVARIANT_VERSION="v0.10.0"
 ###########################################
 
 GENOME_SOURCE=ensembl
-GENOME_FASTA_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiaris/dna/Canis_lupus_familiaris.ROS_Cfam_1.0.dna.toplevel.fa.gz
-GENOME_FASTA_MD5_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiaris/dna/CHECKSUMS
-REFERENCE_DNA_GENOME_NAME=Canis_familiaris.ROS_Cfam_1.0.dna.toplevel.fa
-REFERENCE_RNA_GENOME_NAME=Canis_familiaris.ROS_Cfam_1.0.dna.toplevel.fa
-GENOME_ASSEMBLY_NAME=ros_cfam1.0
-GENOME_SUBVERSION_NAME=ros_cfam1.0_tgen
+GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiarisboxer/dna/Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa.gz
+GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiarisboxer/dna/CHECKSUMS
+REFERENCE_DNA_GENOME_NAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa
+REFERENCE_RNA_GENOME_NAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa
+GENOME_ASSEMBLY_NAME=dog10k_boxer_tasha
+GENOME_SUBVERSION_NAME=dog10k_boxer_tasha_tgen
 
 
 ###########################################
@@ -87,9 +87,9 @@ GENOME_SUBVERSION_NAME=ros_cfam1.0_tgen
 
 GENE_MODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v105
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.105.gtf.gz
-GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiaris/CHECKSUMS
-GENE_MODEL_FILENAME=Canis_lupus_familiaris.ROS_Cfam_1.0.105.gtf
+GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiarisboxer/Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.105.gtf.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiarisboxer/CHECKSUMS
+GENE_MODEL_FILENAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.105.gtf
 
 
 ###########################################
@@ -97,17 +97,17 @@ GENE_MODEL_FILENAME=Canis_lupus_familiaris.ROS_Cfam_1.0.105.gtf
 ###########################################
 
 ENSEMBL_VERSION="105"
-ENSEMBL_DATABASE="canis_lupus_familiaris_core_105_10"
+ENSEMBL_DATABASE="canis_lupus_familiarisboxer_core_105_1"
 ENSEMBL_PORT="3306"
-VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/variation/vep/canis_lupus_familiaris_vep_105_ROS_Cfam_1.0.tar.gz
+VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/variation/vep/canis_lupus_familiarisboxer_vep_105_Dog10K_Boxer_Tasha.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/variation/vep/CHECKSUMS
 
 
 ###########################################
 ##  GATK CNV Variables
 ###########################################
-GENOME_BUILD="Canis_familiaris.ROS_Cfam_1.0"
-LAST_PRIMARY_CONTIG="Y"
+GENOME_BUILD="Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha"
+LAST_PRIMARY_CONTIG="X"
 
 
 ###########################################
@@ -143,6 +143,5 @@ BROAD_KNOWN_SITES=https://data.broadinstitute.org/vgb/dog/dog/canFam3/variation/
 ###########################################
 ## Chain file resources
 ###########################################
-CANFAM3_TO_ROS_CHAIN_DOWNLOAD_LINK=https://hgdownload.soe.ucsc.edu/goldenPath/canFam3/liftOver/canFam3ToGCF_014441545.1.over.chain.gz
-ROS_CHAIN_ALIASES_DOWNLOAD_LINK=https://hgdownload.soe.ucsc.edu/hubs/GCF/014/441/545/GCF_014441545.1/GCF_014441545.1.chromAlias.txt
-FINAL_CHAIN_NAME=canFam3.1ToRos_Cfam1.0.over.chain.gz
+CANFAM3_TO_CANFAM6_CHAIN_DOWNLOAD_LINK=https://hgdownload.soe.ucsc.edu/goldenPath/canFam3/liftOver/canFam3ToCanFam6.over.chain.gz
+FINAL_CHAIN_NAME=canFam3.1TocanFam6.over.chain.gz
