Fixing liftover chain for canfam3tocanfam6, updating genderCheck_SNP creation to use liftover named vcf, fixing other typos

--- a/monte/monte_resources.ini
+++ b/monte/monte_resources.ini
@@ -144,4 +144,5 @@ BROAD_KNOWN_SITES=https://data.broadinstitute.org/vgb/dog/dog/canFam3/variation/
 ## Chain file resources
 ###########################################
 CANFAM3_TO_CANFAM6_CHAIN_DOWNLOAD_LINK=https://hgdownload.soe.ucsc.edu/goldenPath/canFam3/liftOver/canFam3ToCanFam6.over.chain.gz
+CANFAM6_CHAIN_ALIASES_DOWNLOAD_LINK=https://hgdownload.soe.ucsc.edu/hubs/GCF/000/002/285/GCF_000002285.5/GCF_000002285.5.chromAlias.txt
 FINAL_CHAIN_NAME=canFam3.1TocanFam6.over.chain.gz
