Reverting changes to coyote_resources.ini

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -10,10 +10,10 @@ ENVIRONMENT=TGen
 #ENVIRONMENT=LOCAL
 
 # Define input and output directories
-PARENT_DIR=/home/tgenref/canis_familiaris/dog10k_boxer_tasha
-TOPLEVEL_DIR=/home/tgenref/canis_familiaris/dog10k_boxer_tasha/dog10k_boxer_tasha_tgen
+PARENT_DIR=/home/tgenref/canis_familiaris/canfam3.1
+TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
-CREATOR=bturner
+CREATOR=jkeats
 
 ## WARNING!!!
 ## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
@@ -37,7 +37,7 @@ FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 ###########################################
 
 WORKFLOW_NAME=coyote
-GENOME_SUBVERSION_NAME=dog10k_boxer_tasha_tgen
+GENOME_SUBVERSION_NAME=canfam3.1_tgen
 SPECIES="Canis familiaris"
 
 
@@ -61,7 +61,7 @@ SALMON_VERSION="1.2.1-gompi-2019a"
 SALMON_TYPE="puff"
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=dog10k_boxer_tasha.105
+SNPEFF_DB_NAME=canfam3.1.98
 
 CELLRANGER_VERSION="3.1.0"
 
@@ -73,12 +73,12 @@ DEEPVARIANT_VERSION="v0.10.0"
 ###########################################
 
 GENOME_SOURCE=ensembl
-GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiarisboxer/dna/Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa.gz
-GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/fasta/canis_lupus_familiarisboxer/dna/CHECKSUMS
-REFERENCE_DNA_GENOME_NAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa
-REFERENCE_RNA_GENOME_NAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.dna.toplevel.fa
-GENOME_ASSEMBLY_NAME=dog10k_boxer_tasha
-GENOME_SUBVERSION_NAME=dog10k_boxer_tasha_tgen
+GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_familiaris/dna/Canis_familiaris.CanFam3.1.dna.toplevel.fa.gz
+GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_familiaris/dna/CHECKSUMS
+REFERENCE_DNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
+REFERENCE_RNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
+GENOME_ASSEMBLY_NAME=canfam3.1
+GENOME_SUBVERSION_NAME=canfam3.1_tgen
 
 
 ###########################################
@@ -86,27 +86,27 @@ GENOME_SUBVERSION_NAME=dog10k_boxer_tasha_tgen
 ###########################################
 
 GENE_MODEL_SOURCE=ensembl
-GENE_MODEL_NAME=ensembl_v105
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiarisboxer/Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.105.gtf.gz
-GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/gtf/canis_lupus_familiarisboxer/CHECKSUMS
-GENE_MODEL_FILENAME=Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha.105.gtf
+GENE_MODEL_NAME=ensembl_v98
+GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/Canis_familiaris.CanFam3.1.98.gtf.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/CHECKSUMS
+GENE_MODEL_FILENAME=Canis_familiaris.CanFam3.1.98.gtf
 
 
 ###########################################
 ##  VEP Database Variables
 ###########################################
 
-ENSEMBL_VERSION="105"
-ENSEMBL_DATABASE="canis_lupus_familiarisboxer_core_105_1"
+ENSEMBL_VERSION="98"
+ENSEMBL_DATABASE="canis_familiaris_core_98_31"
 ENSEMBL_PORT="3306"
-VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/variation/vep/canis_lupus_familiarisboxer_vep_105_Dog10K_Boxer_Tasha.tar.gz
-VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-105/variation/vep/CHECKSUMS
+VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/canis_familiaris_vep_98_CanFam3.1.tar.gz
+VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
 
 ###########################################
 ##  GATK CNV Variables
 ###########################################
-GENOME_BUILD="Canis_lupus_familiarisboxer.Dog10K_Boxer_Tasha"
+GENOME_BUILD="Canis_familiaris.CanFam3.1"
 LAST_PRIMARY_CONTIG="X"
 
 
