Annotation database updates for clinvar and cosmic, meant to be more dynamic

--- a/tempe/tempe_resources.ini
+++ b/tempe/tempe_resources.ini
@@ -14,9 +14,6 @@ PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
 TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38_tempe
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
 CREATOR=bturner
-# To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
-# The associated script will ask for your password during execution
-COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
 
 ## WARNING!!!
 ## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
@@ -68,7 +65,7 @@ SNPEFF_DB_NAME=grch38.103
 
 CELLRANGER_VERSION="3.1.0"
 
-DEEPVARIANT_VERSION="v0.10.0"
+DEEPVARIANT_VERSION="v1.4.0"
 
 MSISENSOR_PRO_VERSION="1.1.a"
 MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
@@ -113,6 +110,7 @@ DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/maste
 STAR_FUSION_SOURCE=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.10/GRCh38_gencode_v37_CTAT_lib_Mar012021.source.tar.gz
 STAR_FUSION_SOURCE_MD5=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.10/GRCh38_gencode_v37_CTAT_lib_Mar012021.source.tar.gz.md5sum
 STAR_FUSION_SOURCE_VERSION=gencode_v37
+STAR_FUSION_ANNOT_FILT_RULE=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.10/AnnotFilterRule.pm
 
 
 ###########################################
@@ -121,6 +119,20 @@ STAR_FUSION_SOURCE_VERSION=gencode_v37
 ENSEMBL_VERSION="103"
 ENSEMBL_DATABASE="homo_sapiens_core_103_38"
 ENSEMBL_PORT="3306"
+
+
+###########################################
+##  Annotation Database Variables
+###########################################
+CLINVAR_VERSION="20220917"
+GNOMAD_EXOME_VERSION="2.1.1"
+GNOMAD_GENOME_VERSION="3.1.2"
+TOPMED_VERSION="freeze9"
+DBSNP_VERSION="154"
+COSMIC_VERSION="96"
+# To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
+# The associated script will ask for your password during execution
+COSMIC_ACCOUNT_EMAIL="bturner@tgen.org"
 
 
 ###########################################
