--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -10,17 +10,18 @@ ENVIRONMENT=TGen
 #ENVIRONMENT=LOCAL
 
 # Define input and output directories
+REF_DIR=/home/tgenref
 PARENT_DIR=/home/tgenref/homo_sapiens/t2t_chm13
-TOPLEVEL_DIR=/home/tgenref/homo_sapiens/t2t_chm13/chm13_v1.1
+TOPLEVEL_DIR=/home/tgenref/homo_sapiens/t2t_chm13/chm13_v2.0
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
 CREATOR=jkeats
+
 # To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
 # The associated script will ask for your password during execution
 COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
 
 ## WARNING!!!
 ## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
-
 # Set the number of local compute cores to leverage threading options for some steps
 LOCAL_COMPUTE_CORES=20
 # snpEff.jar (https://sourceforge.net/projects/snpeff/files/snpEff_v4_3t_core.zip/download)
@@ -40,12 +41,12 @@ FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 ###########################################
 
 WORKFLOW_NAME=grandcanyon
-GENOME_SUBVERSION_NAME=chm13_v1.1
+GENOME_SUBVERSION_NAME=chm13_v2.0
 SPECIES="Homo sapiens"
 
 
 ###########################################
-##  Required Modules (Or available in your $PATH)
+##  Required Modules and Containers
 ###########################################
 
 BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
@@ -64,27 +65,45 @@ SALMON_VERSION="1.2.1-gompi-2019a"
 SALMON_TYPE="puff"
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=hs37d5.87
+SNPEFF_DB_NAME=grch38.103
 
 CELLRANGER_VERSION="3.1.0"
 
-DEEPVARIANT_VERSION="v0.10.0"
+DEEPVARIANT_VERSION="v1.4.0"
 
+MSISENSOR_PRO_VERSION="1.1.a"
+MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
+
+RSEM_VERSION="1.3.3"
+
+
+# singularity pull docker://amazon/aws-cli:2.15.21
+AWS_CLI_SIF=/home/tgenref/containers/aws-cli_2.15.21.sif
+MINIMAP2_SIF=/home/tgenref/containers/minimap2-samtools_2.26_1.18.sif
+SAMTOOLS_SIF=/home/tgenref/containers/minimap2-samtools_2.26_1.18.sif
+
+# singularity pull https://data.broadinstitute.org/Trinity/CTAT_SINGULARITY/STAR-Fusion/star-fusion.v1.13.0.simg
+STAR_SIMG=/scratch/jkeats/star-fusion.v1.13.0.simg
 
 ###########################################
 ##  Reference Genome Index Variables
 ###########################################
 
 GENOME_SOURCE=T2T
-# Downloaded from this location as the version from NCBI does not use chr1,2, etc.. but accession numbers for contig names
-GENOME_FASTA_DOWNLOAD_LINK=https://s3-us-west-2.amazonaws.com/human-pangenomics/T2T/CHM13/assemblies/chm13.draft_v1.1.fasta.gz
-GENOME_FASTA_MD5_DOWNLOAD_LINK=NA
-# For T2T the MD5 is proided as text on the github site (https://github.com/marbl/CHM13)
-GENOME_FASTA_MD5=1cab2b2776005cdf339ec9f283ba2c70
-REFERENCE_DNA_GENOME_NAME=chm13.draft_v1.1.fasta
-REFERENCE_RNA_GENOME_NAME=chm13.draft_v1.1.fasta
+
+# Downloaded bgzip compressed reference fasta directly from T2T Consortium AWS bucket.
+GENOME_FASTA_DOWNLOAD_LINK=s3://human-pangenomics/T2T/CHM13/assemblies/analysis_set/chm13v2.0_maskedY_rCRS.fa.gz
+# For T2T the MD5 is provided as text on the github site (https://github.com/marbl/CHM13)
+GENOME_FASTA_MD5=b17cd2bdd8eb5544e195d6a8882e417b
+
+# Downloaded bgzip compressed reference fasta index directly from T2T Consortium AWS bucket.
+GENOME_FASTA_INDEX_DOWNLOAD_LINK=s3://human-pangenomics/T2T/CHM13/assemblies/analysis_set/chm13v2.0_maskedY_rCRS.fa.gz.gzi
+# There is no provided MD5sum
+
+REFERENCE_DNA_GENOME_NAME=chm13v2.0_maskedY_rCRS.fa
+REFERENCE_RNA_GENOME_NAME=chm13v2.0_maskedY_rCRS.fa
 GENOME_ASSEMBLY_NAME=T2T_CHM13
-GENOME_SUBVERSION_NAME=T2T_CHM13_v1.1
+GENOME_SUBVERSION_NAME=T2T_CHM13_v2.0
 
 
 ###########################################
@@ -114,6 +133,7 @@ DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/maste
 ENSEMBL_VERSION="87"
 ENSEMBL_DATABASE="homo_sapiens_core_87_37"
 ENSEMBL_PORT="3337"
+
 # Need to check but this should be ensembl 87 release on GRCh37 coordinates but compatible with VEP v98
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
