Updated to create gene model files as needed

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -110,14 +110,24 @@ GENOME_SUBVERSION_NAME=T2T_CHM13_v2.0
 ##  Gene Model Variables
 ###########################################
 
-# Not easy to establish the source gene models mapped to this reference with CAT and LiftOff (http://t2t.gi.ucsc.edu/chm13/hub/t2t-chm13-v1.0/CAT_V4/consensus_CHM13.html)
-GENE_MODEL_SOURCE=T2T
-GENE_MODEL_NAME=gencode_v35_liftover
-GENE_MODEL_DOWNLOAD_LINK=https://s3-us-west-2.amazonaws.com/human-pangenomics/T2T/CHM13/assemblies/annotation/chm13.draft_v1.1.gene_annotation.v4.gff3.gz
-GENE_MODEL_MD5_DOWNLOAD_LINK=NA
-GENE_MODEL_MD5=14865ece7fe6367b8e2b06776a3d522f
-GENE_MODEL_FILENAME=chm13.draft_v1.1.gene_annotation.v4.gff3
+# This is a bit of a mess
+# We will pull the default GTF from ensembl rapid release server
+# This is a lift-over of Gencode 38 and ensembl v110 so it does not include rRNA 45S arrays encoding 18S and 28S species
+## Ensembl annotation of the human assemblies has been produced via a new mapping pipeline:
+## 1. A subset of the GENCODE 38 genes and transcripts have been annotated on each of the haploid assemblies. The subset excludes readthrough genes and genes on patches or haplotypes.
+## 2. For each gene, anchor sequences built from the surrounding region were used to locate the most likely corresponding region(s) in the target genome. A pairwise alignment of the reference and target regions was then carried out and used to map the exon coordinates and other features of the gene.
+## 3. In addition to the primary mapping, potential recent duplications and collapsed paralogues were identified by aligning canonical transcripts across the entire genome and searching for new mappings that did not overlap existing annotations.
+## For more details on the annotation process, please refer to the preprint publication (see “Methods” section: “Ensembl Mapping Pipeline for Assembly Annotation”).
+## https://www.biorxiv.org/content/10.1101/2022.07.09.499321v1
 
+GENE_MODEL_SOURCE=ensembl_rapidRelease
+GENE_MODEL_NAME=gencode_v38_liftover
+GENE_MODEL_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/Homo_sapiens-GCA_009914755.4-2022_07-genes.gtf.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/md5sum.txt
+# CHECK THIS VARIABLE BELOW
+GENE_MODEL_FILENAME=Homo_sapiens-GCA_009914755.4-2022_07-genes.gtf
+
+TRANSCRIPT_FASTA_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/Homo_sapiens-GCA_009914755.4-2022_07-cdna.fa.gz
 
 ###########################################
 ##  Disease Specific Variables
