Updated to create gene model files as needed including 18S and 28S ribosomal location file

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -127,6 +127,13 @@ GENE_MODEL_MD5_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/H
 # CHECK THIS VARIABLE BELOW
 GENE_MODEL_FILENAME=Homo_sapiens-GCA_009914755.4-2022_07-genes.gtf
 
+# To get accurate percent ribosomal with Picard RNAseqMetrics we need an annotation with the 45S Ribosomal units
+# This will only be used to generate the ribosomal list
+RIBOSOME_COMPLETE_GENE_MODEL_Name=RefSeq_Liftoff_v5.1
+RIBOSOME_COMPLETE_GENE_MODEL=s3://human-pangenomics/T2T/CHM13/assemblies/annotation/chm13v2.0_RefSeq_Liftoff_v5.1.gff3.gz
+#https://s3-us-west-2.amazonaws.com/human-pangenomics/T2T/CHM13/assemblies/annotation/chm13v2.0_RefSeq_Liftoff_v5.1.gff3.gz
+#s3://human-pangenomics/T2T/CHM13/assemblies/analysis_set/chm13v2.0_maskedY_rCRS.fa.gz.gzi
+
 TRANSCRIPT_FASTA_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/Homo_sapiens-GCA_009914755.4-2022_07-cdna.fa.gz
 
 ###########################################
