Updated and tested VEP downloads

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -147,13 +147,13 @@ DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/maste
 ###########################################
 ##  VEP Database Variables
 ###########################################
-ENSEMBL_VERSION="87"
-ENSEMBL_DATABASE="homo_sapiens_core_87_37"
+ENSEMBL_VERSION="110"
+ENSEMBL_DATABASE="rapid-release"
 ENSEMBL_PORT="3337"
 
-# Need to check but this should be ensembl 87 release on GRCh37 coordinates but compatible with VEP v98
-VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
-VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
+
+VEP_CACHE_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/variation/2022_10/indexed_vep_cache/Homo_sapiens-GCA_009914755.4-2022_10.tar.gz
+VEP_CACHE_MD5_DOWNLOAD_LINK=NA
 
 
 ###########################################
