updated with bwa-mem2 index creation support

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -54,6 +54,7 @@ BOWTIE2_VERSION="2.3.5.1"
 
 BWA_VERSION="0.7.17"
 BWA_MEM2_VERSION="2.2.1"
+BWA_MEM2_CONTAINER=ghcr.io/tgen/containers/bwa_mem2_samtools:2.2.1-23080315
 
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
 
