updates to support STAR index creation with container

--- a/grandCanyon/grandcanyon_resources.ini
+++ b/grandCanyon/grandcanyon_resources.ini
@@ -49,10 +49,6 @@ SPECIES="Homo sapiens"
 ##  Required Modules and Containers
 ###########################################
 
-BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
-BOWTIE2_VERSION="2.3.5.1"
-
-BWA_VERSION="0.7.17"
 BWA_MEM2_VERSION="2.2.1"
 BWA_MEM2_CONTAINER=ghcr.io/tgen/containers/bwa_mem2_samtools:2.2.1-23080315
 
@@ -65,12 +61,8 @@ STAR_VERSION="2.7.5a"
 SALMON_VERSION="1.2.1-gompi-2019a"
 SALMON_TYPE="puff"
 
-SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=grch38.103
-
-CELLRANGER_VERSION="3.1.0"
-
-DEEPVARIANT_VERSION="v1.4.0"
+MINIMAP2_VERSION=2.26
+MINIMAP2_CONTAINER=/home/tgenref/containers/minimap2-samtools_2.26_1.18.sif
 
 MSISENSOR_PRO_VERSION="1.1.a"
 MSISENSOR_PRO_MODULE="MSIsensor/1.1.a-GCCcore-8.2.0"
@@ -84,7 +76,8 @@ MINIMAP2_SIF=/home/tgenref/containers/minimap2-samtools_2.26_1.18.sif
 SAMTOOLS_SIF=/home/tgenref/containers/minimap2-samtools_2.26_1.18.sif
 
 # singularity pull https://data.broadinstitute.org/Trinity/CTAT_SINGULARITY/STAR-Fusion/star-fusion.v1.13.0.simg
-STAR_SIMG=/scratch/jkeats/star-fusion.v1.13.0.simg
+STAR_VERSION="2.7.11a"
+STAR_CONTAINER=trinityctat/starfusion:1.13.0
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -125,8 +118,8 @@ GENE_MODEL_SOURCE=ensembl_rapidRelease
 GENE_MODEL_NAME=gencode_v38_liftover
 GENE_MODEL_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/Homo_sapiens-GCA_009914755.4-2022_07-genes.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/geneset/2022_07/md5sum.txt
-# CHECK THIS VARIABLE BELOW
-GENE_MODEL_FILENAME=Homo_sapiens-GCA_009914755.4-2022_07-genes.gtf
+# CHECK THIS VARIABLE BELOW, USED IN STAR INDEX CREATION, since we have to edit GTF to have chr1 not 1, this needs to be the updated filename
+GENE_MODEL_FILENAME=Homo_sapiens-GCA_009914755.4-2022_07-genes_UCSC.gtf
 
 # To get accurate percent ribosomal with Picard RNAseqMetrics we need an annotation with the 45S Ribosomal units
 # This will only be used to generate the ribosomal list
@@ -156,6 +149,11 @@ ENSEMBL_PORT="3337"
 VEP_CACHE_DOWNLOAD_LINK=https://ftp.ensembl.org/pub/rapid-release/species/Homo_sapiens/GCA_009914755.4/ensembl/variation/2022_10/indexed_vep_cache/Homo_sapiens-GCA_009914755.4-2022_10.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=NA
 
+###########################################
+##  STAR-FUSION
+###########################################
+
+# Appears that star-fusion does provide a prebuild set that matches the gene model being used
 
 ###########################################
 ##  GATK CNV Variables
